// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render prev / next link for directory 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;

exports[`renders a loader if directory cover is changing 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="Loader"
  >
    <div
      className="Loader__BallScaleRippleMultiple"
    >
      <div
        style={
          Object {
            "borderColor": "#1eb694",
          }
        }
      />
      <div
        style={
          Object {
            "borderColor": "#1eb694",
          }
        }
      />
      <div
        style={
          Object {
            "borderColor": "#1eb694",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders a loader if file is not loaded 1`] = `<div />`;

exports[`renders empty file without crashing 1`] = `<div />`;

exports[`renders file with a map 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div>
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search for an address"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-1"
      />
    </div>
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;

exports[`renders file with backlink 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;

exports[`renders file with backlink and parent as root 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;

exports[`renders file with prev / next links 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;

exports[`renders file with prev / next links 2`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;

exports[`renders file without override position link 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div />
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders real file without crashing 1`] = `
<div>
  <header
    className="FileHeader"
  >
    <div
      className="FileHeader__BackContainer"
    />
  </header>
  <div
    className="File__MainContainer"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="File__ImageContainer"
      style={
        Object {
          "height": "700px",
        }
      }
    >
      <img
        alt="Foo"
        className="File__Image"
        src="http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="react-autosuggest__container"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-1"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for an address"
      role="combobox"
      type="text"
      value=""
    />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
    />
  </div>
  <table
    className="Table"
  >
    <tbody>
      <tr>
        <th>
          Filename
        </th>
        <td>
          Foo
        </td>
      </tr>
      <tr>
        <th>
          Camera
        </th>
        <td>
           
        </td>
      </tr>
      <tr>
        <th>
          Date
        </th>
        <td />
      </tr>
      <tr>
        <th>
          Size
        </th>
        <td>
          x
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="OpiumBtn OpiumBtn--primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Set as directory cover
  </button>
</div>
`;
